test/errors/missing_semicolon.haste
const a: int = 42
const b = 1;